samples/_failures_safe/1761398917_571647_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f97cb193.c: In function ‘main’:
./samples/SAFE/__tmp_f97cb193.c:165:13: error: expected declaration or statement at end of input
  165 |             printf("Error: Invalid command format\n");
      |             ^~~~~~
./samples/SAFE/__tmp_f97cb193.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f97cb193.c:165:13: error: expected declaration or statement at end of input
